# gwbridge

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: build.yml
src/contentdeploy/: application.py  cli.py
src/gwbridge/: __init__.py  application.py  cli.py  logger.py
src/gwbridge/config/: config-default.json  metadata-default.json
tests/: test_application.py
tests/resources/: mock_blank_post.json  mock_get_existing_images_response.json  mock_markdown_file.md  mock_md_conversion_result.html  mock_parse_document_result.html  mock_upload_image_response.json
