[tool.poetry]
name = "content-deploy"
version = "0.1.0"
description = "Program to handle continuous deployment of content to blogs"
authors = ["Samuel Dowling <samuel.dowling@protonmail.com>"]
packages = [
	{include = "contentdeploy", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.23.0"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pudb = "^2019.2"
black = "^19.10b0"
flake8 = "^3.8.1"
pre-commit = "^2.4.0"

[tool.poetry.scripts]
content-deploy = 'contentdeploy.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
