[tool.poetry]
name = "gwbridge"
version = "1.0.0"
description = "Publishes markdown content to a Wordpress blog"
authors = ["Samuel Dowling <samuel.dowling@protonmail.com>"]
readme = "README.md"
license = "GPL-3.0-only"
homepage = "https://github.com/samuel-emrys/gwbridge"
classifiers = [
	"Programming Language :: Python :: 3"
]
packages = [
	{include = "gwbridge", from = "src"},
]

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"
click = "^7.1.2"
requests-oauthlib = "^1.3.0"
beautifulsoup4 = "^4.9.1"
pypandoc = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pudb = "^2019.2"
black = "^19.10b0"
flake8 = "^3.8.1"
pre-commit = "^2.4.0"
pytest-mock = "^3.1.0"
mock = "^4.0.2"
requests-mock = "^1.8.0"

[tool.poetry.scripts]
gwbridge = 'gwbridge.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
